--- a/static/css/global.css
+++ b/static/css/global.css
@@ -11,3 +11,56 @@ body {
     width: 100%;
     margin: 0;
 }
+
+
+/* Fonts */
+
+@font-face {
+    font-family: PoppinsMd;
+    src: url(/static/fonts/Poppins/Poppins-Medium.ttf);
+}
+
+@font-face {
+    font-family: Pacifico;
+    src: url(/static/fonts/Pacifico/Pacifico-Regular.ttf);
+}
+
+@font-face {
+    font-family: Nobia-regular;
+    src: url(/static/fonts/Nobia/Nobia\ Regular.ttf);
+}
+
+@font-face {
+    font-family: Montserrat-Regular;
+    src: url(/static/fonts/Montserrat/static/Montserrat-Regular.ttf);
+}
+
+@font-face {
+    font-family: Montserrat-Medium;
+    src: url(/static/fonts/Montserrat/static/Montserrat-Medium.ttf);
+}
+
+@font-face {
+    font-family: Montserrat-Light;
+    src: url(/static/fonts/Montserrat/static/Montserrat-Light.ttf);
+}
+
+@font-face {
+    font-family: Montserrat-SemiBold;
+    src: url(/static/fonts/Montserrat/static/Montserrat-SemiBold.ttf);
+}
+
+@font-face {
+    font-family: Montserrat-Bold;
+    src: url(/static/fonts/Montserrat/static/Montserrat-Bold.ttf);
+}
+
+@font-face {
+    font-family: Montserrat-ExtraBold;
+    src: url(/static/fonts/Montserrat/static/Montserrat-ExtraBold.ttf);
+}
+
+@font-face {
+    font-family: Multi;
+    src: url(/static/fonts/Multi/MultiText-Regular.otf);
+}
