--- a/static/footer/footer.css
+++ b/static/footer/footer.css
@@ -1,23 +1,10 @@
-/* variables */
-:root {
-  --white: #FFFFFF;
-  --black: #4d504a;
-  --Rose_Gold: #B76E79;
-  --Ivory_White: #FDFDFD;
-  --Dusty_Rose: #D4A6B1;
-  --Charcoal_Gray: #333333;
-  --grey_border: #e1e1e1;
-  --grey: #84847C;
-  --beige-bg: #f4f0ed;
-  --padding-glob: 40px;
-}
-
 footer {
   display: flex;
   flex-direction: column;
   border-top: 1px solid var(--grey_border);
+  font-family: var(--montserrat-medium);
   color: var(--grey);
-  font-family: CormorantGaramond-Medium;
+  background-color: var(--Ivory_White);
 }
 
 #footer_details {
@@ -33,6 +20,7 @@ footer {
   align-items: center;
 }
 #footer_details #footer-follow #footer-follow_me {
+  font-family: var(--montserrat-bold);
   font-weight: bold;
   text-align: center;
   margin: 0;
@@ -67,8 +55,8 @@ footer {
   margin: 10px;
 }
 #footer_details #footer-customer #footer-custom_serv {
+  font-family: var(--montserrat-bold);
   font-weight: bold;
-  box-sizing: border-box;
   margin: 0;
 }
 #footer_details #footer-customer a, #footer_details #footer-customer a:hover, #footer_details #footer-customer a:active {
@@ -86,6 +74,7 @@ footer {
   margin: 10px;
 }
 #footer_details #footer-contact #footer-contact_now {
+  font-family: var(--montserrat-bold);
   font-weight: bold;
   margin: 0;
 }
@@ -104,11 +93,11 @@ footer {
 }
 
 #footer-copyright {
-  text-align: center;
-  font-size: 13px;
   padding: 10px;
-  background-color: var(--beige-bg);
+  font-size: 13px;
+  text-align: center;
   color: var(--black);
+  background-color: var(--blanc-casse);
 }
 #footer-copyright p {
   margin: 0;
@@ -130,4 +119,31 @@ footer {
   #footer_details .footer-title {
     height: 45px;
   }
+}
+/* Var */
+:root {
+  /* colors */
+  --white: #D8D8D8;
+  --Ivory_White: #FDFDFD;
+  --black: #4d504a;
+  --noir-bleu: #002845;
+  --blanc-casse: #F8F9FC;
+  --bleu-fonce: #1E3E89;
+  --bleu-gris: #CDDBF4;
+  --bleu-clair: #E6FBFF;
+  --vert-medical: #1ABAB9;
+  --Charcoal_Gray: #333333;
+  --grey_border: #e1e1e1;
+  --grey: #84847C;
+  /* fonts */
+  --multi: Multi;
+  --montserrat-medium: Montserrat-Medium;
+  --montserrat-regular: Montserrat-Regular;
+  --montserrat-light: Montserrat-Light;
+  --montserrat-semibold: Montserrat-SemiBold;
+  --montserrat-bold: Montserrat-Bold;
+  --montserrat-extrabold: Montserrat-ExtraBold;
+  --nobia-regular: Nobia-regular;
+  --pacifico: Pacifico;
+  --poppins-md: PoppinsMd;
 }/*# sourceMappingURL=footer.css.map */
