--- a/static/css/about.css
+++ b/static/css/about.css
@@ -1,11 +1,5 @@
 body {
-  background-image: url(/static/img/bg-with-colors.svg);
-  background-size: contain;
-  background-repeat: repeat;
-}
-
-main {
-  padding: 0 50px;
+  background-color: var(--Ivory_White);
 }
 
 header {
@@ -55,13 +49,13 @@ header {
 }
 .about-el {
   width: 100%;
-  padding-bottom: 150px;
+  padding: 60px 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .about-el .about-el-img {
-  width: 30%;
+  width: 40%;
 }
 .about-el .about-el-img img {
   width: 100%;
@@ -69,9 +63,9 @@ header {
      object-fit: cover;
 }
 .about-el .about-el-txt {
-  width: 50%;
+  width: 60%;
   align-self: stretch;
-  margin-left: 30px;
+  margin-left: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -81,38 +75,43 @@ header {
   font-size: 28px;
   font-family: var(--montserrat-semibold);
   text-align: center;
-  color: #101E48;
+  color: var(--bleu-fonce);
   margin-top: 0;
   margin-bottom: 50px;
 }
 .about-el .about-el-txt p {
-  font-size: 20px;
   font-family: var(--montserrat-regular);
+  font-size: 18px;
+  line-height: 35px;
+  color: var(--black);
   margin: 0;
 }
 .about-el #about-nom {
   font-size: 35px;
-  color: var(--bleu-fonce);
+  color: var(--noir-bleu);
 }
 
 .reverse {
   flex-direction: row-reverse;
+  background-color: var(--blanc-casse);
 }
 .reverse .about-el-txt {
   margin-left: 0;
-  margin-right: 30px;
+  margin-right: 100px;
 }
 
-@media (max-width: 850px) {
-  main {
-    padding: 0 20px;
-  }
+.pb-50 {
+  padding-bottom: 75px;
+}
+
+@media (max-width: 800px) {
   #title {
     margin-bottom: 30px;
   }
   .about-el {
     flex-direction: column;
-    padding-bottom: 120px;
+    padding: 50px 20px;
+    padding-top: 60px;
   }
   .about-el .about-el-img {
     width: 100%;
@@ -127,63 +126,142 @@ header {
     font-size: 25px;
     margin: 40px 0;
   }
-  .about-el .about-el-txt p {
-    font-size: 15px;
-  }
   .about-el .about-el-txt #about-nom {
     font-size: 30px;
   }
   .reverse {
     flex-direction: column;
   }
+  .pb-50 {
+    padding-bottom: 50px;
+  }
 }
-/* Fonts */
-@font-face {
-  font-family: PoppinsMd;
-  src: url(/static/fonts/Poppins/Poppins-Medium.ttf);
+#testimonials-big-container {
+  width: 100%;
+  padding: 60px 0;
+  overflow-x: hidden;
+  background-color: var(--blanc-casse);
 }
-@font-face {
-  font-family: Pacifico;
-  src: url(/static/fonts/Pacifico/Pacifico-Regular.ttf);
+
+#testimonials-container {
+  width: 100%;
+  margin: 0 auto;
 }
-@font-face {
-  font-family: Nobia-regular;
-  src: url(/static/fonts/Nobia/Nobia\ Regular.ttf);
+
+#testimonials-title {
+  width: 100%;
+  margin-bottom: 40px;
+  padding: 0 50px;
 }
-@font-face {
-  font-family: Montserrat-Regular;
-  src: url(/static/fonts/Montserrat/static/Montserrat-Regular.ttf);
+#testimonials-title h1 {
+  width: 100%;
+  margin: 0;
+  font-size: 35px;
+  text-align: center;
+  font-family: var(--montserrat-bold);
+  color: var(--noir-bleu);
 }
-@font-face {
-  font-family: Montserrat-Medium;
-  src: url(/static/fonts/Montserrat/static/Montserrat-Medium.ttf);
+
+#testimonials {
+  position: relative;
 }
-@font-face {
-  font-family: Montserrat-Light;
-  src: url(/static/fonts/Montserrat/static/Montserrat-Light.ttf);
+
+#testimonials-total {
+  width: 300%;
+  padding: 40px 0;
+  position: absolute;
+  display: flex;
+  align-items: start;
 }
-@font-face {
-  font-family: Montserrat-SemiBold;
-  src: url(/static/fonts/Montserrat/static/Montserrat-SemiBold.ttf);
+
+.testimonial {
+  opacity: 0;
+  width: 80%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0;
 }
-@font-face {
-  font-family: Montserrat-Bold;
-  src: url(/static/fonts/Montserrat/static/Montserrat-Bold.ttf);
+
+.testimonial-content q {
+  font-size: 18px;
+  font-family: var(--montserrat-regular);
+  letter-spacing: 1px;
+  line-height: 35px;
+  color: var(--black);
 }
-@font-face {
-  font-family: Multi;
-  src: url(/static/fonts/Multi/MultiText-Regular.otf);
+
+.testimonial-name {
+  width: 100%;
+  padding-top: 50px;
 }
-/* Var */
+.testimonial-name i {
+  display: block;
+  width: 100%;
+  text-align: end;
+  font-size: 18px;
+  font-style: italic;
+  color: var(--black);
+}
+
+#testimonials-buttons {
+  height: 30px;
+  width: 200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#testimonials-buttons p {
+  font-size: 30px;
+  font-weight: bold;
+  color: var(--bleu-fonce);
+  cursor: pointer;
+}
+
+@media (max-width: 900px) {
+  #testimonials-big-container {
+    padding: 50px 0;
+  }
+  #testimonials-big-container #testimonials-container .testimonial {
+    padding: 0 20px;
+  }
+  #testimonials-title {
+    padding: 0 20px;
+  }
+}
+@media (max-width: 550px) {
+  #testimonials-title {
+    margin-bottom: 10px;
+  }
+  #testimonials-title h1 {
+    font-size: 30px;
+  }
+  #testimonials-buttons p {
+    font-size: 50px;
+  }
+}
+@keyframes visible {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 :root {
   /* colors */
-  --white-pure: #FFFFFF;
   --white: #D8D8D8;
+  --Ivory_White: #FDFDFD;
   --black: #4d504a;
-  --gris: #C3D2E1;
+  --noir-bleu: #002845;
+  --blanc-casse: #F8F9FC;
   --bleu-fonce: #1E3E89;
-  --bleu-clair: #7FCCF0;
-  --bleu-tres-clair: #CDDBF4;
+  --bleu-gris: #CDDBF4;
+  --bleu-clair: #E6FBFF;
+  --vert-medical: #1ABAB9;
+  --Charcoal_Gray: #333333;
+  --grey_border: #e1e1e1;
+  --grey: #84847C;
   /* fonts */
   --multi: Multi;
   --montserrat-medium: Montserrat-Medium;
@@ -191,8 +269,8 @@ header {
   --montserrat-light: Montserrat-Light;
   --montserrat-semibold: Montserrat-SemiBold;
   --montserrat-bold: Montserrat-Bold;
+  --montserrat-extrabold: Montserrat-ExtraBold;
   --nobia-regular: Nobia-regular;
   --pacifico: Pacifico;
   --poppins-md: PoppinsMd;
-  --padding-glob: 40px;
 }/*# sourceMappingURL=about.css.map */
