--- a/templates/offres.html
+++ b/templates/offres.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="/static/nav/nav.css">
     <script src="/static/nav/nav.js"></script>
 
+    <link rel="stylesheet" href="/static/footer/footer.css">
+
     <link rel="stylesheet" href="/static/css/offres.css">
 </head>
 <body>
     <!-- bg -->
-    <img id="bg-color" src="/static/img/bg-with-colors.svg" alt="">
+    <!-- <img id="bg-color" src="/static/img/bg-with-colors.svg" alt=""> -->
 
     <!-- Nav -->
     <nav>
@@ -134,5 +136,66 @@
             <p class="offre-plus">voir plus</p>
         </div>
     </main>
+
+    <!-- footer -->
+    <footer>
+        <!-- details -->
+        <div id="footer_details">
+            <!-- follow me -->
+            <div id="footer-follow">
+                <div class="footer-title">
+                    <p id="footer-follow_me">Suivez-Nous</p>
+                </div>
+                <div id="footer-social">
+                    <!-- tiktok -->
+                    <svg viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    onclick="window.open('{{ about.lien_tiktok }}', '_blank');">
+                        <path d="M13.1002 2.82C12.4166 2.03962 12.0399 1.03743 12.0402 0H8.95016V12.4C8.92632 13.071 8.64303 13.7066 8.15992 14.1729C7.67682 14.6393 7.0316 14.8999 6.36016 14.9C4.94016 14.9 3.76016 13.74 3.76016 12.3C3.76016 10.58 5.42016 9.29 7.13016 9.82V6.66C3.68016 6.2 0.660156 8.88 0.660156 12.3C0.660156 15.63 3.42016 18 6.35016 18C9.49016 18 12.0402 15.45 12.0402 12.3V6.01C13.2932 6.90985 14.7975 7.39265 16.3402 7.39V4.3C16.3402 4.3 14.4602 4.39 13.1002 2.82Z"
+                        fill="#84847C"/>
+                    </svg>
+                    <!-- sep -->
+                    <div class="footer-separator"></div>
+                    <!-- facebook -->
+                    <svg viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    onclick="window.open('{{ about.lien_facebook }}', '_blank');">
+                        <path d="M7 11.5H9.5L10.5 7.5H7V5.5C7 4.47 7 3.5 9 3.5H10.5V0.14C10.174 0.0970001 8.943 0 7.643 0C4.928 0 3 1.657 3 4.7V7.5H0V11.5H3V20H7V11.5Z"
+                        fill="#84847C"/>
+                    </svg>
+                    <!-- sep -->
+                    <div class="footer-separator"></div>
+                    <!-- instagram -->
+                    <svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    onclick="window.open('{{ about.lien_insta }}', '_blank');">
+                        <path d="M5.8 0H14.2C17.4 0 20 2.6 20 5.8V14.2C20 15.7383 19.3889 17.2135 18.3012 18.3012C17.2135 19.3889 15.7383 20 14.2 20H5.8C2.6 20 0 17.4 0 14.2V5.8C0 4.26174 0.61107 2.78649 1.69878 1.69878C2.78649 0.61107 4.26174 0 5.8 0ZM5.6 2C4.64522 2 3.72955 2.37928 3.05442 3.05442C2.37928 3.72955 2 4.64522 2 5.6V14.4C2 16.39 3.61 18 5.6 18H14.4C15.3548 18 16.2705 17.6207 16.9456 16.9456C17.6207 16.2705 18 15.3548 18 14.4V5.6C18 3.61 16.39 2 14.4 2H5.6ZM15.25 3.5C15.5815 3.5 15.8995 3.6317 16.1339 3.86612C16.3683 4.10054 16.5 4.41848 16.5 4.75C16.5 5.08152 16.3683 5.39946 16.1339 5.63388C15.8995 5.8683 15.5815 6 15.25 6C14.9185 6 14.6005 5.8683 14.3661 5.63388C14.1317 5.39946 14 5.08152 14 4.75C14 4.41848 14.1317 4.10054 14.3661 3.86612C14.6005 3.6317 14.9185 3.5 15.25 3.5ZM10 5C11.3261 5 12.5979 5.52678 13.5355 6.46447C14.4732 7.40215 15 8.67392 15 10C15 11.3261 14.4732 12.5979 13.5355 13.5355C12.5979 14.4732 11.3261 15 10 15C8.67392 15 7.40215 14.4732 6.46447 13.5355C5.52678 12.5979 5 11.3261 5 10C5 8.67392 5.52678 7.40215 6.46447 6.46447C7.40215 5.52678 8.67392 5 10 5ZM10 7C9.20435 7 8.44129 7.31607 7.87868 7.87868C7.31607 8.44129 7 9.20435 7 10C7 10.7956 7.31607 11.5587 7.87868 12.1213C8.44129 12.6839 9.20435 13 10 13C10.7956 13 11.5587 12.6839 12.1213 12.1213C12.6839 11.5587 13 10.7956 13 10C13 9.20435 12.6839 8.44129 12.1213 7.87868C11.5587 7.31607 10.7956 7 10 7Z"
+                        fill="#84847C"/>
+                    </svg>
+                </div>
+                <p id="footer-miss_news">Pour ne rien rater!</p>
+            </div>
+            <div class="footer-divider"></div>
+            <!-- customer service -->
+            <div id="footer-customer">
+                <div class="footer-title">
+                    <p id="footer-custom_serv">Service Client</p>
+                </div>
+                <p><a href="{% url 'landing:about' %}">À Propos</a></p>
+                <p><a href="{% url 'landing:contact' %}">Contactez-Nous</a></p>
+                <p><a href="{% url 'landing:rdv' %}">Offres d'Emplois</a></p>
+            </div>
+            <div class="footer-divider"></div>
+            <!-- contact -->
+            <div id="footer-contact">
+                <div class="footer-title">
+                    <p id="footer-contact_now">Contacts</p>
+                </div>
+                <p>contact@lgc-dz.com</p>
+                <p>0669 29 58 62</p>
+            </div>
+        </div>
+        <!-- copy right -->
+        <div id="footer-copyright">
+            <p>&copy; 2023 Copyright - www.lgc-dz.com</p>
+        </div>
+    </footer>
 </body>
 </html>
